feat: integrate dish ratings into wishlist responses and enhance security configuration